# wapp-manager

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
api-gateway/app/: main.py
api-gateway/app/api/: deps.py  router.py
api-gateway/app/api/routes/: auth.py  users.py
api-gateway/app/core/: config.py
api-gateway/app/models/: user.py
api-gateway/app/schemas/: user.py
api-gateway/app/utils/: crud_user.py
app/: main.py
app/core/: logging_config.py  security.py
app/db/: constants.py  session.py
app/models/: auth.py
app/ws/: router.py
charts/: Chart.yaml  values.yaml
charts/templates/: _helpers.tpl  api-gateway.yaml  ingress.yaml  mongodb.yaml  post-install-job.yaml  pre-install-job.yaml
