[project]
name = "wappmanager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==3.2.2",
    "fastapi>=0.121.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.4",
    "pymongo>=4.15.3",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "uvicorn>=0.38.0",
]
